--- a/WebApplication3/appsettings.json
+++ b/WebApplication3/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Key": "ABC123456789123456789123456789123456789123456789123456789"
+  },
   "AllowedHosts": "*"
 }
